--- a/terraform/modules/iot-events/cloudFormationTemplate.yaml
+++ b/terraform/modules/iot-events/cloudFormationTemplate.yaml
@@ -184,7 +184,7 @@ Resources:
                     - IotTopicPublish:
                         MqttTopic: $aws/things/heating/shadow/update
                         Payload:
-                          ContentExpression: '''{\"state\":{\"desired\":{\"on\":false}}}'''
+                          ContentExpression: '''{"state":{"desired":{"on":false}}}'''
                           Type: JSON
                   Condition: "true"
                   EventName: disable_heating
@@ -195,14 +195,14 @@ Resources:
               TransitionEvents:
                 - Actions: []
                   Condition:
-                    $input.temp_sensor_input.value > $variable.desiredTemperature
-                    + $variable.allowedError
+                    $input.temp_sensor_input.value > ($variable.desiredTemperature
+                    + $variable.allowedError)
                   EventName: too_hot
                   NextState: cooling
                 - Actions: []
                   Condition:
-                    "($input.temp_sensor_input.value + $variable.allowedError) <
-                    $variable.desiredTemperature "
+                    ($input.temp_sensor_input.value + $variable.allowedError) <
+                    $variable.desiredTemperature
                   EventName: too_cold
                   NextState: heating
             StateName: idle
@@ -231,15 +231,17 @@ Resources:
               TransitionEvents:
                 - Actions: []
                   Condition:
-                    $input.temp_sensor_input.value <= ($variable.desiredTemperature
-                    + $variable.anomalousDelta)
-                  EventName: not_dangerous
+                    ($input.temp_sensor_input.value <= ($variable.desiredTemperature
+                    + $variable.anomalousDelta)) && ($input.temp_sensor_input.value > ($variable.desiredTemperature
+                    + $variable.allowedError))
+                  EventName: not_dangerously_hot
                   NextState: cooling
                 - Actions: []
                   Condition:
                     $input.temp_sensor_input.value >= ($variable.desiredTemperature
-                    - $variable.anomalousDelta)
-                  EventName: not_dangerous
+                    - $variable.anomalousDelta) && (($input.temp_sensor_input.value + $variable.allowedError) <
+                    $variable.desiredTemperature)
+                  EventName: not_dangerously_cold
                   NextState: heating
             StateName: alarm
           - OnEnter:
@@ -339,7 +341,7 @@ Resources:
                     - IotTopicPublish:
                         MqttTopic: $aws/things/humidifier/shadow/update
                         Payload:
-                          ContentExpression: '''{"state":{"reported":{"on":false}}}'''
+                          ContentExpression: '''{"state":{"desired":{"on":false}}}'''
                           Type: JSON
                   Condition: "true"
                   EventName: disable_humdifier
@@ -462,6 +464,9 @@ Resources:
                 - Actions:
                     - IotTopicPublish:
                         MqttTopic: $aws/things/alarm/shadow/update
+                        Payload:
+                          ContentExpression: '''{"state":{"desired":{"on":false}}}'''
+                          Type: JSON
                   Condition: "true"
                   EventName: disable_alarm
             OnExit:
@@ -470,9 +475,7 @@ Resources:
               Events: []
               TransitionEvents:
                 - Actions: []
-                  Condition:
-                    "$input.breakIn_alarm_input.on || $input.humidity_alarm_input.on\
-                    \ ||\n$input.temperature_alarm_input.on"
+                  Condition: $input.breakIn_alarm_input.on || $input.humidity_alarm_input.on || $input.temperature_alarm_input.on
                   EventName: danger
                   NextState: alarm
             StateName: normal
@@ -493,8 +496,8 @@ Resources:
               TransitionEvents:
                 - Actions: []
                   Condition:
-                    "!($input.breakIn_alarm_input.on && $input.humidity_alarm_input.on
-                    && $input.temperature_alarm_input.on)"
+                    "!($input.breakIn_alarm_input.on || $input.humidity_alarm_input.on
+                    || $input.temperature_alarm_input.on)"
                   EventName: no_danger
                   NextState: normal
             StateName: alarm
